<resources>
    <string name="app_name">Inventory app</string>
    <string name="bg_header">bg_header</string>
    <string name="inventory_app">Inventory app</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="bienvenido_a_inventory_app">Bienvenido a Inventory app</string>
    <string name="title_activity_agregar_proveedor">Agregar_ProveedorActivity</string>
    <string name="description">Aplicacion realizada por el grupo #2 del 4A, enfocada en el manejo de inventario.</string>
    <string name="integrantes">Pedro Mera Macías \n Jessica Martínez Acosta \n Anabelle Gonzalez Villon \n Angie Camila Alvarado \n Juan Alvarado Piza \n Luis Correa Álava</string>
    <string name="integrantes1">Integrantes</string>
    <string name="informacion_de_usuario">Información de usuario:</string>
    <string name="informacion_de_la_tienda_negocio">Información de la tienda/negocio:</string>
    <string name="nombre_de_la_tienda_negocio">Nombre de la tienda/negocio</string>
    <string name="direccion_de_la_tienda_negocio">Direccion de la tienda/negocio</string>
    <string name="telefono">Telefono</string>

</resources>