<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Activities.StartActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido a Inventory app"
        android:textColor="#ffff"
        android:shadowColor="#12ec34"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaabold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="242dp"
        android:layout_height="248dp"
        android:contentDescription="logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337"
        app:srcCompat="@drawable/logoinventorymanagement"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/inventory_app"
        android:textColor="#212121"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaaregular"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/gradient_background_button"
        android:text="@string/iniciar_sesi_n"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaabold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:background="@drawable/gradient_background_button"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textSize="21dp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaabold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonIniciarSesion"
        app:layout_constraintStart_toStartOf="@+id/buttonIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/buttonIniciarSesion"
        app:layout_constraintVertical_bias="0.313"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>